// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmoticonRating RatingItem applies correct props if item is active 1`] = `
<MockStyledComponent
  $index={1}
  $isActive={false}
  $isSelected={false}
  aria-checked={false}
  aria-posinset={1}
  aria-setsize={5}
  key="1"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseOver={[Function]}
  role="radio"
  tabIndex={0}
/>
`;

exports[`EmoticonRating RatingItem applies correct props if item is selected 1`] = `
<MockStyledComponent
  $index={2}
  $isActive={true}
  $isSelected={true}
  aria-checked={true}
  aria-posinset={2}
  aria-setsize={5}
  key="2"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseOver={[Function]}
  role="radio"
  tabIndex={0}
/>
`;
